--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,9 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-axios": "^3.4.1",
+    "vue-datepicker": "^1.3.0",
     "vue-router": "^3.2.0",
+    "vue2-datepicker": "^3.11.1",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
