--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,11 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "bootstrap": "^5.3.3",
+    "bootstrap-datepicker": "^1.10.0",
     "core-js": "^3.6.5",
+    "jquery": "^3.7.1",
+    "moment": "^2.30.1",
     "vue": "^2.6.11",
     "vue-axios": "^3.4.1",
     "vue-datepicker": "^1.3.0",
