--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "vue": "^2.6.11",
     "vue-axios": "^3.4.1",
     "vue-datepicker": "^1.3.0",
+    "vue-pagination-2": "^3.1.0",
     "vue-router": "^3.2.0",
     "vue-the-mask": "^0.11.1",
     "vue2-datepicker": "^3.11.1",
