fix: editando docker de front

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,9 +2,11 @@ FROM node:14
 
 WORKDIR /app
 
-COPY ./frontend /app
+COPY . .
 
 RUN npm install
+
+RUN npm install axios vue-pagination-2 moment
 
 RUN npm run build
 
